fix slider on mobile devices (#10)

--- a/source/styles/blocks/_slider.scss
+++ b/source/styles/blocks/_slider.scss
@@ -59,6 +59,7 @@
 
   cursor: ew-resize;
   transition: background 100ms;
+  touch-action: none;
 }
 
 .slider__thumb::after {
